# tamp_ws

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
common/: CMakeLists.txt  setup.py
common/config/: ctrl_interface_params.yaml  experiment_config.yaml  gotthard_racing_nonadapt_config.yaml  popup_dry_config.yaml  popup_local_min_config.yaml  popup_nonadapt_config.yaml  popup_wet_config.yaml  racing_nonadapt_config.yaml  reduced_mu_turn_config.yaml  reduced_mu_turn_nonadapt_config.yaml
common/config/exp_config/: asta_coll_avoid_config.yaml  asta_gauntlet_config.yaml  asta_gauntlet_east_config.yaml  asta_oval_east_config.yaml  asta_reduced_mu_turn_config.yaml  asta_two_laps_east_config.yaml  frihamnen_tests_config.yaml  gotthard_racing_config.yaml  popup_dry_config.yaml  popup_local_min_config.yaml  popup_wet_config.yaml  reduced_mu_turn_config.yaml  rural_test_route_1_config.yaml  sh_coll_avoid_config.yaml  sh_reduced_mu_turn_config.yaml  storaholm_gravel_south_config.yaml
common/config/obstacles/: double_popup_1.yaml  double_popup_local_min.yaml  gauntlet_east_single_lap.yaml  gauntlet_east_single_lap_gen.yaml  gauntlet_east_single_lap_man.yaml  multiple_popup_10_laps.yaml  multiple_popup_10_laps_rs42.yaml  no_popup.yaml  oval_east_single_lap_gen.yaml  single_popup_1.yaml  single_popup_sh.yaml
common/config/rviz_config/: saarti_real.rviz  saarti_sim.rviz
common/config/sim_config/: gotthard_FSG.yaml  rhino_asta_coll_avoid.yaml  rhino_asta_gauntlet.yaml  (+14 more)
common/launch/: base.launch  bringup_gotthard_FSG.launch  bringup_opendlv.launch  bringup_perception_rhino_real.launch  bringup_rhino_asta.launch  bringup_sim.launch  demo.launch  experiment.launch  experiment_real.launch  experiment_sim.launch  perception_real.launch  perception_sim.launch  run_experiment_rhino_real.launch  saarti_fssim.launch  single_experiment.launch  tamp_experiment_real.launch  tamp_experiment_sim.launch  tamp_perception_real.launch  tamp_perception_sim.launch  tamp_racing_test.launch  tamp_replay.launch  tamp_replay_odlv_only.launch  tamp_replay_vis_only.launch
common/modules/: asta_track_generation.py  coordinate_transforms.py  get_track_from_google_earth.py  log_eval.py  obstacle_generation.py  tamp_scenario_plot.py  test_constraint_polygon.py  track_generation.py  util.py  vehicle_params.py
common/msg/: MuEst.msg  MuSegments.msg  Obstacles.msg  OriginPoseUTM.msg  Path.msg  PathLocal.msg  SaartiStatus.msg  State.msg  StaticVehicleParams.msg  Trajectory.msg
common/scripts/: GP_test.py  GP_test_2.py  GP_test_3.py  GP_test_4.py  GP_test_5.py  GP_test_6.py  GP_util.py  asta_track_generation.py  ctrl_interface.py  ctrl_interface_old.py  dummy_state_and_trajhat_publisher.py  exp_manager.py  experiment_manager.py  friction_circle_plots.py  gazebo_pauser.py  liveplotter.py  log_eval.py  log_eval_ani.py  magigformula_test.py  real_exp_manager.py  sim_exp_manager.py  simple_vehicle.py  tmp.py
larsvens_experiment_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
misc/: devel_cart2frenet.py
perception/: CMakeLists.txt  package.xml
perception/config/: friction_est_config.yaml  perception_config.yaml
perception/data/: path_local_example.mat  pathglobal.npy  pathglobal_th.mat
perception/launch/: friction_est.launch
perception/scripts/: compute_kappa.py  friction_est.py  fssim_track_iface.py  live_plot_test.py  localization_and_state_est.py  localization_and_state_est_loadglobalpath.py  object_detection.py  perception.py  perception_old.py  propagateVehicle.py  road_perception.py  state_est_cart.py  state_est_frenet.py  stateestimation.py  tmp_spline.py  track_iface.py  track_preparation.py
rqt/: ctrl_tuning.perspective
saarti/: CMakeLists.txt
saarti/config/: planning_and_ctrl_config.yaml  saarti_params.yaml
saarti/launch/: ctrl_interface.launch  planning_and_ctrl.launch  saarti_node.launch
saarti/misc_tools/: dare_test.m  get_LQT_gain_matrix.py  lqr_tests.py  print_jacobian_dynamic_vehicle_model_Fyf_Fxf_Fxr_input.m  print_symbolic_jacobian_of_nl_model.m
saarti/scripts/: ctrl_interface.py  jacobian_comp.py  test_polyfit_curvature.py
saarti/src/: cuda_rollout.cu  cuda_wrapper.cu  helloWorld.cu  planning_util.cpp  rollout.cpp  rtisqp_wrapper.cpp  saarti_node.cpp  saarti_node.cpp.autosave
saasqp/: CMakeLists.txt
saasqp/data/: trajhat_example.mat
saasqp/include/saasqp/: rtisqp_wrapper.h
saasqp/scripts/: dummy_state_and_trajhat_publisher.py  trajhat_publisher.py
saasqp/src/: rtisqp_wrapper.cpp  saasqp_node.cpp
src/: saasqp_node.cpp
src/common/: CMakeLists.txt  package.xml  setup.py
src/planning/: CMakeLists.txt  package.xml
src/saasqp/: CMakeLists.txt  package.xml
src/vehicle_models/: package.xml
src/visualization/: CMakeLists.txt
vehicle/: CMakeLists.txt  package.xml
vehicle/scripts/: propagateVehicle.py  vehicle_param_publisher.py
vehicle_models/: CMakeLists.txt
vehicle_models/config/: static_params_vehicle1.yaml
vehicle_models/scripts/: vehicle_param_publisher.py
visualization/: package.xml
visualization/scripts/: liveplotter.py
(+100 files in other folders)
